--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "xunit-xml-parser",
   "version": "0.1.0",
   "private": true,
+  "homepage": "xml-parser",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "codemirror": "^5.52.0",
     "react": "^16.13.0",
+    "react-codemirror2": "^6.0.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "xml2js": "^0.4.23"
   },
   "scripts": {
     "start": "react-scripts start",
